fix z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ header {
     display: flex;
     -ms-align-items: center;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 footer {
